@@ -53,4 +53,16 @@ Sandbox_EN = {
     Sandbox_MoreTraits_MartialScaling_tooltip = "A percent value representing how strong the scaling in damage for Martial Artist is.<br>Setting this to 50% would halve all damage.",
     Sandbox_MoreTraits_ButterfingersChance = "Butterfingers Chance In X",
     Sandbox_MoreTraits_ButterfingersChance_tooltip = "The chance in X how frequently a player with Butterfingers will drop an item.<br>The base chance is 5, so by default this value would be a 5/2000 chance calculated every in-game minute.<br>Lowering this value could result in players constantly dropping their items.",
+    Sandbox_MoreTraits_ScroungerChance = "Scrounger Chance",
+    Sandbox_MoreTraits_ScroungerChance_tooltip = "A percent value representing the chance that a player with the Scrounger trait will find extra loot in any container.<br>100% would make every container have extra loot.",
+    Sandbox_MoreTraits_ScroungerLootModifier = "Scrounger Loot Modifier",
+    Sandbox_MoreTraits_ScroungerLootModifier_tooltip = "A percent value representing how much extra loot players with the Scrounger trait will find when Scrounger triggers.<br>100% would double the amount of extra loot players find.<br>This value always rounds up, so even a single item can potentially be doubled.<br>This effect is most noticed in stacks of items such as cigarettes or ammunition.",
+    Sandbox_MoreTraits_ScroungerItemChance = "Scrounger Item Chance",
+    Sandbox_MoreTraits_ScroungerItemChance_tooltip = "A percent value representing how likely any item in a container is to be duplicated by Scrounger.<br>For example: Scrounger Chance is the percent chance that any given container will potentially have extra loot in it.<br>Once a container passes this initial check, another series of checks is run - for every single item inside that container, a die is rolled to determine if that item is duplicated.<br>If for instance, this value is set to 100%, then whenever Scrounger is triggered, the entire contents of that container will be duplicated.<br>If Scrounger Chance, and Scrounger Item Chance are both 100%, then anyone with the Scrounger trait will find double the loot in every container.",
+    Sandbox_MoreTraits_IncomprehensiveChance = "Incomprehensive Chance",
+    Sandbox_MoreTraits_IncomprehensiveChance_tooltip = "A percent value representing the chance that a player with the Incomprehensive trait will find fewer items in any container.<br>Setting this to 100% would make every container lose some items.",
+    Sandbox_MoreTraits_VagabondChance = "Vagabond Chance",
+    Sandbox_MoreTraits_VagabondChance_tooltip = "A percent value representing the chance that a player with the Vagabond trait will find extra food in a garbage bin.<br>Setting this to 100% would make every trash bin contain extra food.",
+    Sandbox_MoreTraits_VagabondGuaranteedExtraLoot = "Vagabond Guaranteed Extra Loot",
+    Sandbox_MoreTraits_VagabondGuaranteedExtraLoot_tooltip = "How many extra food items is a player with the Vagabond trait guaranteed to find in a garbage bin?<br>By default, a random value between 0 and 2 is selected. This value adds to that range.<br>(eg; roll a random number between 0 and 2 and then add x, where x is this value.)",
 }
