@@ -5,3 +5,5 @@ Add Compatibility for Dynamic Traits
 Bloody Crowbar uses correct weapon model
 Alcoholic gets less fatigue from alcohol.
 Update Expert/Student Driver functions
+Remove Scrounger callout.
+Add Sandbox options for Scrounger, Incomprehensive, and Vagabond.
